--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="quizScores">
       <h1>View High Scores</h1>
     </div>
-    <div id="quizTimer">
-      <h2>Timer</h2>
+    <div id="timerCSS">
+      <p>Time Left:<span id="timeLeft">200</span></p>
     </div>
   </header>
 
