trying to fix issue where the array isnt moveing to the next question on click

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>View High Scores</h1>
     </div>
     <div id="timerCSS">
-      <p>Time Left:<span id="timeLeft">200</span></p>
+      <p>Time Left:<span id="timeLeft">120</span></p>
     </div>
   </header>
 
@@ -22,15 +22,18 @@
     <div id="houseQuestions">
       <div id="quizPrompt">
         <h2>Coding Quiz Challenge</h2>
-          <p>Once you are ready please select the "Start Quiz" option and your times quiz will begin.
-            As you submit your answer, you will notice the response appear at the bottom for Correct or Incorrect.
-            GOOD LUCK!
-          </p>
-          <button id="startQuizButton">Start Quiz!</button>
+        <p>Once you are ready please select the "Start Quiz" option and your times quiz will begin.
+          As you submit your answer, you will notice the response appear at the bottom for Correct or Incorrect.
+          GOOD LUCK!
+        </p>
+        <button id="startQuizButton">Start Quiz!</button>
       </div>
     </div>
-
   </main>
+
+  <footer class="footerCSS">
+    <h2>Made with love by Fred McWilliams</h2>
+  </footer>
 
 <script src="./assets/js/script.js"></script>
 </body>
